--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <div id="label-container"></div>
 
     <script type="text/javascript">
-        // 👇 Insira aqui o link real do seu modelo Teachable Machine
-        const URL = "https://teachablemachine.withgoogle.com/models/SEU_MODELO_AQUI/";
+        const URL = "https://teachablemachine.withgoogle.com/models/LQs_CZCK3/";
 
         let model, webcam, labelContainer, maxPredictions;
 
@@ -33,7 +32,7 @@
             model = await tmImage.load(modelURL, metadataURL);
             maxPredictions = model.getTotalClasses();
 
-            webcam = new tmImage.Webcam(300, 300, true);
+            webcam = new tmImage.Webcam(200, 200, true);
             await webcam.setup();
             await webcam.play();
             window.requestAnimationFrame(loop);
@@ -58,6 +57,9 @@
                 labelContainer.childNodes[i].innerHTML = classPrediction;
             }
         }
+
+        const URL = "https://teachablemachine.withgoogle.com/models/LQsEMODELO/"; // 👈 coloque aqui sua URL correta!
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
