--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-        button { padding: 10px 20px; font-size: 16px; }
+        button { padding: 10px 20px; font-size: 16px; border-radius: 0px; }
         #label-container { margin-top: 20px; font-size: 18px; }
     </style>
 </head>
@@ -21,7 +21,7 @@
     <div id="label-container"></div>
 
     <script type="text/javascript">
-        const URL = "https://teachablemachine.withgoogle.com/models/LQsEMODELO/"; // 👈 Substitua pela URL correta do seu modelo
+        const URL = "https://teachablemachine.withgoogle.com/models/LQs_CZCK3/";
 
         let model, webcam, labelContainer, maxPredictions;
 
